// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaruselItem/> render with optional props ::qaSelector as "{{qaSelector}}" 1`] = `
<div
  className="carusel-item"
  data-cy="{{qaSelector}}"
>
  <div
    className="carusel-item__image"
    data-cy="{{qaSelector}}"
    style={
      Object {
        "backgroundImage": "url(\\"{{src}}\\")",
      }
    }
  />
  <span
    className="carusel-item__tags"
    data-cy="{{qaSelector}}tags"
  >
    {{tags}}
  </span>
</div>
`;

exports[`<CaruselItem/> render with required/default props 1`] = `
<div
  className="carusel-item"
  data-cy=""
>
  <div
    className="carusel-item__image"
    data-cy=""
    style={
      Object {
        "backgroundImage": "url(\\"{{src}}\\")",
      }
    }
  />
  <span
    className="carusel-item__tags"
    data-cy="tags"
  >
    {{tags}}
  </span>
</div>
`;
